# mcp-hotel-smart-book

./: README.md  pyproject.toml
mcp_hotel_smart_book/: __init__.py  server.py
